@@ -22,6 +22,7 @@ systemd System and Service Manager
  	- make ExecStopPost action part of ExecStart;
  * systemctl:
  	- show StatusErrno value in "systemctl status";
+ 	- remove property argument option;
  * shared:
  	- consider 0x7F(DEL) a control chracter;
  	- don't consider tabs special in string_has_cc() anymore;
